<resources>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">CurrencyExchange</string>
    <string name="track">How to TRACK our spending</string>
    <string name="description1">We can easily track our spending by using this app.</string>
    <string name="controls">How to CONTROL our spending</string>
    <string name="description2">We can easily control and alter our spending by using this app.</string>
    <string name="remove">How to REMOVE our spending</string>
    <string name="description3">We can easily remove any one from our spending by using this app.</string>
    <string name="currency">How to CHANGE currency of prices</string>
    <string name="description4">We can easily display amount of our spending in different currency by using this app.</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="spendingexplanation">spendingExplanation</string>
    <string name="spendingtype">spendingType</string>
    <string name="spendingamount">0.00</string>
    <string name="spendingcurrency">TRY</string>
    <string name="textname">Welcome\nYour Name</string>
    <string name="texttotalamount">0.00</string>
    <string name="texttotalcurrency">TRY</string>
    <string name="enteryourname">Enter Your Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="hidden">Hidden</string>
    <string name="add">Add</string>
    <string name="trycurrency">TRY</string>
    <string name="usdcurrency">USD</string>
    <string name="eurcurrency">EUR</string>
    <string name="gbpcurrency">GBP</string>
    <string name="textinserttitle">Insert to\nSpending List</string>
    <string name="textdeletetitle">Delete from\nSpending List</string>
    <string name="shoppingextra">Shopping/Extra</string>
    <string name="rent">Rent</string>
    <string name="bill">Bill</string>
    <string name="delete">Delete</string>

</resources>