<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".insertdeletescreens.InsertFragment">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_back"
        app:layout_constraintEnd_toStartOf="@+id/textInsertTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textInsertTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/textinserttitle"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/backIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textSpendingExplanation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@color/lightgold"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInsertTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSpendingExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/spendingexplanation" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textSpendingAmount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@color/lightgold"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSpendingExplanation">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSpendingAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/spendingamount"
            android:inputType="numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/typeRadioGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSpendingAmount">

        <RadioButton
            android:id="@+id/bill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bill" />

        <RadioButton
            android:id="@+id/rent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rent" />

        <RadioButton
            android:id="@+id/shopping"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/shoppingextra" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/typeRadioGroup3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeRadioGroup2">

        <RadioButton
            android:id="@+id/turkishlira"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/trycurrency"
            android:layout_marginEnd="20dp"/>

        <RadioButton
            android:id="@+id/americandollar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/usdcurrency"
            android:layout_marginEnd="20dp"/>

        <RadioButton
            android:id="@+id/europeaneuro"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/eurcurrency"
            android:layout_marginEnd="20dp"/>

        <RadioButton
            android:id="@+id/britishpound"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/gbpcurrency"
            android:layout_marginEnd="20dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.743"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeRadioGroup3" />

    <Button
        android:id="@+id/buttonSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeRadioGroup3" />

</androidx.constraintlayout.widget.ConstraintLayout>