<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.screens.SecondScreen">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/raw_2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_spendingcontrols" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="320dp"
        android:layout_height="110dp"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="false"
        android:text="@string/controls"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/raw_2" />

    <TextView
        android:id="@+id/description2"
        android:layout_width="320dp"
        android:layout_height="85dp"
        android:layout_marginTop="40dp"
        android:text="@string/description2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2" />

    <Button
        android:id="@+id/buttonDone2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="274dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="40dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonBack2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="40dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonDone2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSkip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="274dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:text="@string/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>