<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/recyclerView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageRow"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/spendingExplanation"
            android:hint="@string/spendingexplanation"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_toEndOf="@+id/imageRow"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/spendingType"
            android:hint="@string/spendingtype"
            android:textStyle="bold"
            android:textColor="@color/lightgray"
            android:textColorHint="@color/lightgray"
            android:layout_toEndOf="@+id/imageRow"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/spendingExplanation"/>

        <TextView
            android:id="@+id/spendingAmount"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/spendingamount"
            android:textColor="@color/lightgold"
            android:textColorHint="@color/lightgold"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/spendingCurrency"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_below="@id/spendingAmount"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/spendingcurrency"
            android:textColor="@color/darkgold"
            android:textColorHint="@color/darkgold"
            android:textStyle="bold" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>